k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: posthoot-server
  labels:
    name: posthoot-server
    app: posthoot
